# huffman-rs

./: .gitignore  Cargo.toml  README.md
examples/: encode_file.rs  encode_text.rs
src/: lib.rs
