[package]
name = "huffman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2"
total_float_wrap = "0.1"
bitvec = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rmp-serde = "1"
